# jsonqml

./: CMakeLists.txt  Form.qml  benvironment.yml  conda-install-dependencies.bat  conda-install-dependencies.sh  environment.devenv.yml  json_editor_main.cpp  jsonqml.pro  jsonqml.qrc  main.cpp
.github/workflows/: ci-build.yml  ci-cd.yml  deploy-linux.yml  deploy-macos.yml  deploy-windows.yml
ci/appveyor/: build.bat  install.bat
ci/pipelines/: install-osx.sh  install.sh  installVS.bat  test.sh
ci/travis/: install.sh  test.sh
cmake/modules/: jsonqmlConfig.cmake.in  jsonqmlFindDeps.cmake  jsonqmlInstallCMakeConfigFiles.cmake
include/jsonqml/: arango_database.h  arango_document.h
include/jsonqml/charts/: chart_model.h  chart_view.h  graph_data.h  legend_data.h  legend_model.h  xyseries_decorator.h
include/jsonqml/clients/: chart_client.h  edge_client.h  json_client.h  settings_client.h  table_client.h  vertex_client.h
include/jsonqml/models/: base_model.h  csv_model.h  db_keys_model.h  db_query_model.h  json_model.h  schema_model.h  select_model.h
qml/: EdgeForm.qml  EdgeKeys.qml  JsonView.qml  PreferencesForm.qml  SelectTableView.qml  VertexForm.qml  VertexKeys.qml  db_view_main.qml
qml/forms/: PrefForm.qml
resources/: jsonqml-config.json
resources/data/schemas/: schema_test.schema.json
resources/tmp/: JsonView_old.qml
src/: CMakeLists.txt  arango_database.cpp  arango_database_p.h  arango_document.cpp  arango_document_p.h  jsonqml.qrc  qmldir
src/charts/: chart_model.cpp  chart_view.cpp  graph_data.cpp  legend_data.cpp  legend_model.cpp  markershapes.cpp  markershapes.h  xyseries_decorator.cpp
src/clients/: chart_client.cpp  edge_client.cpp  edge_client_p.h  json_client.cpp  json_client_p.h  settings_client.cpp  table_client.cpp  table_client_p.h  vertex_client.cpp  vertex_client_p.h
src/models/: base_model.cpp  csv_model.cpp  db_keys_model.cpp  db_query_model.cpp  json_model.cpp  schema_model.cpp  select_model.cpp
src/qml/: ChartsPreferences.qml  ChartsSeriesView.qml  EdgeForm.qml  EdgeKeys.qml  EditTableView.qml  JsonEditor.qml  JsonView.qml  PreferencesForm.qml  SymbolForm.qml  VertexForm.qml
tests/: CMakeLists.txt  test.cpp
tests/testdata/: data.SimpleSchemaTest.json  example.ComplexSchemaTest.json  qq-plot-data.csv
tools/: CMakeLists.txt  charts_view_main.cpp  charts_view_main.qml  db_view_main.cpp  db_view_main.qml  json_editor_main.cpp  json_editor_main.qml  json_main.qml  tools.qrc
